added max number of hours for user in admin's employee view fixes #7

--- a/src/main/resources/public/locale/en.json
+++ b/src/main/resources/public/locale/en.json
@@ -205,7 +205,8 @@
       },
       "employees": {
         "subtractDaysFail": "You cannot subtract more than current number of days from employee's days pool",
-        "changeDaysPool": "Employee's days pool has been successfully modified"
+        "changeDaysPool": "Employee's days pool has been successfully modified",
+        "addDaysFail": "You cannot add more days than it is allowed"
       }
     },
     "holidays": {
