--- a/src/main/resources/public/locale/pl.json
+++ b/src/main/resources/public/locale/pl.json
@@ -118,9 +118,11 @@
     "subtr_hours_confirm": "Czy na pewno chcesz odjąć {{daysToAdd}} godzin/y urlopu pracownikowi {{employee}}?",
     "add_days_confirm": "Czy na pewno chcesz dodać {{daysToAdd}} dni urlopu pracownikowi {{employee}}?",
     "subtr_days_confirm": "Czy na pewno chcesz odjąć {{daysToAdd}} dni urlopu pracownikowi {{employee}}?",
-    "days_left": "Pozostały urlop: {{days}} dni {{hours}} godzin.",
-    "shift": "Etat {{workTime_a}}/{{workTime_b}}",
-    "full_time": "Pełen etat",
+    "days_left_start": "Pozostały urlop: ",
+    "days_left": "{{days}} dni {{hours}}",
+    "days_left_end": " godzin.",
+    "shift": "etat {{workTime_a}}/{{workTime_b}}",
+    "full_time": "pełen etat",
     "modify_pool": "Zmień pulę urlopu",
     "mail": "Adres e-mail",
     "all_teams": "Wszystkie zespoły",
@@ -130,7 +132,7 @@
     "comment_placeholder": "Komentarz do operacji",
     "show_all": "Pokaż wszystkie",
     "last_operations": "Ostatnie zmiany",
-    "hours": "godzin",
+    "hours": "godziny",
     "hourly": "Godzinowo",
     "days": "dni",
     "only_leaders": "Tylko liderzy zespołów",
@@ -138,7 +140,10 @@
     "EC_employees": "Pracownicy na etacie",
     "EC_employee": "etat",
     "type_of_job": "Rodzaj zatrudnienia",
-    "contract_issue": "brak umowy"
+    "contract_issue": "brak umowy",
+    "works_on": "Pracownik jest zatrudniony na ",
+    "hourly_tooltip": "Zmień tryb wprowadzania",
+    "modify_workTime": "Zmień etat"
   },
   "workers_view": {
     "days_left": "Pozostało {{days}} dni {{hours}} godzin urlopu.",
@@ -205,7 +210,8 @@
       },
       "employees": {
         "subtractDaysFail": "Nie można odjąć pracownikowi więcej dni urlopu niż aktualnie przez niego posiadanych",
-        "changeDaysPool": "Pomyślnie zmodyfikowano pulę dni wolnych pracownika"
+        "changeDaysPool": "Pomyślnie zmodyfikowano pulę dni wolnych pracownika",
+        "changeWorkTime": "Pomyślnie zmodyfikowano etat pracownika"
       }
     },
     "holidays": {
