issues: #15 fixed, #14 fixed - refactored occasional events database structure has been changed!

--- a/src/main/resources/public/locale/en.json
+++ b/src/main/resources/public/locale/en.json
@@ -195,7 +195,9 @@
     },
     "form": {
       "success": "Your request has been added successfully",
-      "notEnoughDaysPool": "Failed to submit the request due to insufficient remaining days pool"
+      "notEnoughDaysPool": "Failed to submit the request due to insufficient remaining days pool",
+      "requestOverlapping": "The request's term is overlapping with your another request.",
+      "fail": "Failed to submit the request, try again"
     },
     "request": {
       "accept": "Employee's request has been accepted",
