--- a/src/main/resources/public/locale/en.json
+++ b/src/main/resources/public/locale/en.json
@@ -213,7 +213,8 @@
       "employees": {
         "subtractDaysFail": "You cannot subtract more than current number of days from employee's days pool",
         "changeDaysPool": "Employee's days pool has been successfully modified",
-        "changeWorkTime": "Employee's work time has been successfully modified"
+        "changeWorkTime": "Employee's work time has been successfully modified",
+        "changeModeFailure": "Not allowed to insert hours to employee who works full-time!"
       }
     },
     "holidays": {
