--- a/src/main/resources/public/locale/en.json
+++ b/src/main/resources/public/locale/en.json
@@ -115,9 +115,9 @@
     "title": "Employees",
     "name": "Name",
     "add_hours_confirm": "Are you sure you want to add {{daysToAdd}} hours to {{employee}}'s vacation pool?",
-    "subtr_hours_confirm": "Are you sure you want to add {{daysToAdd}} hours to {{employee}}'s vacation pool?",
-    "add_days_confirm": "Are you sure you want to add {{daysToAdd}} hours to {{employee}}'s vacation pool?",
-    "subtr_days_confirm": "Are you sure you want to add {{daysToAdd}} hours to {{employee}}'s vacation pool?",
+    "subtr_hours_confirm": "Are you sure you want to subtract {{daysToAdd}} hours to {{employee}}'s vacation pool?",
+    "add_days_confirm": "Are you sure you want to add {{daysToAdd}} days to {{employee}}'s vacation pool?",
+    "subtr_days_confirm": "Are you sure you want to subtract {{daysToAdd}} days to {{employee}}'s vacation pool?",
     "days_left_start": "Employee has ",
     "days_left": "{{days}} days and {{hours}}",
     "days_left_end": "hours vacation left",
