--- a/src/main/resources/public/locale/pl.json
+++ b/src/main/resources/public/locale/pl.json
@@ -145,7 +145,9 @@
     "contract_issue": "brak umowy",
     "works_on": "Pracownik jest zatrudniony na ",
     "hourly_tooltip": "Zmień tryb wprowadzania",
-    "modify_workTime": "Zmień etat"
+    "modify_workTime": "Zmień etat",
+    "workTime_changed": "Zmiana etatu",
+    "workTime": "Etat"
   },
   "workers_view": {
     "days_left": "Pozostało {{days}} dni {{hours}} godzin urlopu.",
@@ -156,8 +158,8 @@
     "title": "Historia",
     "created": "Utworzono",
     "decider": "Rozpatrujący",
-    "pool": "Liczba dni",
-    "left": "Pozostało dni",
+    "pool": "Wartość zmiany",
+    "left": "Pozostały urlop",
     "comment": "Komentarz"
   },
   "requests_view": {
