added max number of hours for user in admin's employee view (#9)
fixes #7

--- a/src/main/resources/public/locale/pl.json
+++ b/src/main/resources/public/locale/pl.json
@@ -217,6 +217,7 @@
       "employees": {
         "subtractDaysFail": "Nie można odjąć pracownikowi więcej dni urlopu niż aktualnie przez niego posiadanych",
         "changeDaysPool": "Pomyślnie zmodyfikowano pulę dni wolnych pracownika",
+        "addDaysFail": "Próba dodania większej ilości dni niż jest to dozwolone",
         "changeWorkTime": "Pomyślnie zmodyfikowano etat pracownika",
         "changeModeFailure": "Nie można wprowadzać godzin pracownikowi, który jest zatrudniony na cały etat!"
       }
