--- a/src/main/resources/public/locale/en.json
+++ b/src/main/resources/public/locale/en.json
@@ -217,6 +217,7 @@
       "employees": {
         "subtractDaysFail": "You cannot subtract more than current number of days from employee's days pool",
         "changeDaysPool": "Employee's days pool has been successfully modified",
+        "addDaysFail": "You cannot add more days than it is allowed",
         "changeWorkTime": "Employee's work time has been successfully modified",
         "changeModeFailure": "Not allowed to insert hours to employee who works full-time!"
       }
