improved requests table for worker, leader and admin fixed #26

--- a/src/main/resources/public/locale/en.json
+++ b/src/main/resources/public/locale/en.json
@@ -94,6 +94,13 @@
       "accept": "Accept",
       "deny": "Deny",
       "cancelRequest": "Cancel"
+    },
+    "search": {
+      "term": "Search for term...",
+      "requester": "Search for requester..."
+    },
+    "filter": {
+      "all": "Show all"
     }
   },
   "navbar": {
