--- a/src/main/resources/public/locale/pl.json
+++ b/src/main/resources/public/locale/pl.json
@@ -94,6 +94,13 @@
       "accept": "Zatwierdź",
       "deny": "Odmów",
       "cancelRequest": "Anuluj"
+    },
+    "search": {
+      "term": "Szukaj terminu...",
+      "requester": "Szukaj wnioskodawcy..."
+    },
+    "filter": {
+      "all": "Pokaż wszystko"
     }
   },
   "navbar": {
