--- a/src/main/resources/public/locale/en.json
+++ b/src/main/resources/public/locale/en.json
@@ -124,6 +124,7 @@
     "days_left": "{{days}} days and {{hours}}",
     "days_left_end": "hours vacation left",
     "shift": "on part-time {{workTime_a}}/{{workTime_b}}",
+    "work_time": "on part-time {{time}}",
     "full_time": "full time",
     "modify_pool": "Modify vacation pool",
     "mail": "E-mail address",
@@ -215,6 +216,7 @@
         "failure": "An error occured during synchronization of employees with database"
       },
       "employees": {
+        "parsingProblem": "Problem with days pool parsing occurs. Check if it has been entered in the format '0d 0h 0m'",
         "subtractDaysFail": "You cannot subtract more than current number of days from employee's days pool",
         "changeDaysPool": "Employee's days pool has been successfully modified",
         "addDaysFail": "You cannot add more days than it is allowed",
