added working days number info next to the term resolves #56
fixed master leader problem
fixes #57

--- a/src/main/resources/public/locale/en.json
+++ b/src/main/resources/public/locale/en.json
@@ -74,7 +74,8 @@
     }
   },
   "worker_view": {
-    "title": "My requests"
+    "title": "My requests",
+    "work_days": "working days"
   },
   "leader_view": {
     "title": "Your team's requests"
