--- a/src/main/resources/public/locale/pl.json
+++ b/src/main/resources/public/locale/pl.json
@@ -250,6 +250,7 @@
     "when_funeral2": "Dwudniowy urlop okolicznościowy przysługuje w związku z zgonem i pogrzebem małżonka, dziecka, ojca, matki, ojczyma lub macochy.",
     "when_wedding2": "Dwudniowy urlop okolicznościowy przysługuje w związku z twoim ślubem.",
     "when_funeral1": "Jednodniowy urlop okolicznościowy przysługuje w związku z zgonem i pogrzebem siostry, brata, teściowej, teścia, babki, dziadka, a także innej osoby, którą utrzymujesz lub którą się bezpośrednio opiekujesz",
-    "when_wedding1": "Jednodniowy urlop okolicznościowy przysługuje w związku z ślubem Twojego dziecka."
+    "when_wedding1": "Jednodniowy urlop okolicznościowy przysługuje w związku z ślubem Twojego dziecka.",
+    "info": "<b>2 dni przysługuje w związku z:</b><ul><li>Twoim ślubem,</li><li>narodzinami dziecka,</li><li>zgonem i pogrzebem małżonka, dziecka, ojca, matki, ojczyma lub macochy.</li></ul><br><b>1 dzień przysługuje w razie:</b><ul><li>ślubu Twojego dziecka,</li><li>zgonu i pogrzebu siostry, brata, teściowej, teścia, babki, dziadka, a także innej osoby, którą utrzymujesz lub którą się bezpośrednio opiekujesz.</li></ul>"
   }
 }
