--- a/src/main/resources/public/locale/en.json
+++ b/src/main/resources/public/locale/en.json
@@ -102,7 +102,8 @@
     },
     "filter": {
       "all": "Show all"
-    }
+    },
+    "loading": "Loading ..."
   },
   "navbar": {
     "name": "Name",
