--- a/src/main/resources/public/locale/pl.json
+++ b/src/main/resources/public/locale/pl.json
@@ -102,7 +102,8 @@
     },
     "filter": {
       "all": "Pokaż wszystko"
-    }
+    },
+    "loading": "Ładowanie ..."
   },
   "navbar": {
     "name": "Imie i nazwisko",
