Requests & Acceptances GUI flow refactoring
- add new history log constructor
- rename controller's methods
- add history log service methods for requests logging
- add existsByDate methods to holidays repository
- rename DurationCalculator to WorkDaysCalculator
- make WorkDaysCalculator as Bean
- add acceptance status enum
- refactor acceptance controller
- add new acceptance repository and service
- add excerpt projection for acceptance
- make exceptions as runtime exceptions
- refactor request controller
- add excerpt projection for request
- add input object for request
- add new request repository and service
- make team repository transactional
- remove orderBy from repository methods witch uses Pageable
- remove decider from acceptances
- add http error codes to exceptions
- change "START" - "STOP" to "BEGIN" - "END" in scheduler logs
- update create_table.sql script
- add translations for statuses and types
- update front-end to match to the new api

--- a/src/main/resources/public/locale/en.json
+++ b/src/main/resources/public/locale/en.json
@@ -85,6 +85,7 @@
     "leader": "Decider",
     "date": "Days off",
     "pool_left": "Days left",
+    "type": "Type",
     "status": "Status",
     "reason": "Reason",
     "accepted": "Accepted",
@@ -252,5 +253,16 @@
     "when_wedding2": "The two-day occasional vacation is due to your wedding.",
     "when_funeral1": "The one-day occasional vacation is due to death and funeral of sister, brother, mother-in-law, father-in-law, grandmother, grandfather, as well as a person you're directly taking care of",
     "when_wedding1": "The one-day occasional vacation is due to wedding of your child."
+  },
+  "status": {
+    "ACCEPTED": "Accepted",
+    "REJECTED": "Rejected",
+    "PENDING": "In progress",
+    "CANCELED": "Cancelled",
+    "EXPIRED": "Expired"
+  },
+  "type": {
+    "NORMAL": "Normal",
+    "OCCASIONAL": "Occasional"
   }
 }
