--- a/src/main/resources/public/locale/pl.json
+++ b/src/main/resources/public/locale/pl.json
@@ -263,7 +263,7 @@
     "EXPIRED": "Przedawnione"
   },
   "type": {
-    "NORMAL": "Normalny",
+    "NORMAL": "Wypoczynkowy",
     "OCCASIONAL": "Okazjonalny"
   }
 }
