Implement Criteria API (#81)
- allow to filter by requester in all requests view

--- a/src/main/resources/public/locale/en.json
+++ b/src/main/resources/public/locale/en.json
@@ -98,8 +98,7 @@
       "cancelRequest": "Cancel"
     },
     "search": {
-      "term": "Search for term...",
-      "requester": "Search for requester..."
+      "requester": "first name or last name of requester..."
     },
     "filter": {
       "all": "Show all"
