https://jira.fingo.info/browse/PRAK-189 Update AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,9 +1,11 @@
-Jakub Licznerski <jak.liczner@gmail.com>
 Józef Grodzicki <jozef.grodzicki@gmail.com>
-Mateusz Wiśniewski <smuggler232@gmail.com>
+Jakub Licznerski <jak.liczner@gmail.com>
 Tomasz Pilarczyk <tomasz.pilarczyk@icloud.com>
 Tomasz Urbas <tm.urbas@gmail.com>
+Mateusz Wiśniewski <smuggler232@gmail.com>
 
-en_flag.png Icon made by Freepik from www.flaticon.com
-error_art.gif created by fuckyeah-pixels from http://fuckyeah-pixels.tumblr.com/
-pl_flag.png Icon made by Freepik from www.flaticon.com
+Witold Brzozowski <witold@bbrzozowski.pl>
+Dawid Dudek <dawiddudekstg@gmail.com>
+Piotr Łężny <plezny@gmail.com>
+Kacper Mikołajczyk <mikolajczyk.kacper2000@gmail.com>
+Mateusz Uzarek <uzarek.mateusz@gmail.com>
